checkstyle 🤯😕 😏  😤   🤔